# imobi

./: README.md  pyproject.toml  tecnologias.md
autenticacao/: urls.py  views.py
autenticacao/templates/: cadastro.html
imobi/: settings.py  urls.py
plataforma/: admin.py  models.py  urls.py  views.py
plataforma/migrations/: 0001_initial.py
plataforma/templates/: home.html
templates/: base.html
templates/static/autenticacao/css/: cadastro.css
