[tool.poetry]
name = "imobi"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
Pillow = "^9.0.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
